Major changes from version modelE-2-0 to modelE-2-1
=====================================================

 - Minor fixes to almost all components

 - New options for snow-age definitions, Sea-ice and SST cycling.

 - netcdf output now fully functional

 - Changes to makefiles for compilation using Linux compilers (Absoft + Lahey)

Major changes from version modelE-1-3-3 to modelE-2-0
=====================================================

Atmospheric Model:

 - Advection of Q now done outside dynamics loop

 - New sea ice albedo scheme (pudlling and snowage replaced with
   prognostic melt-pond fraction and wet/dry snow flag).

 - solar radiation penetration through sea ice now wavelength dependent

 - the basal fluxes between the ice and ocean are calculated using a new
   turbulence scheme. New routines UNDERICE, iceocean, icelake.

 - parallelisation directives for atmospheric model

 - changes to boundary layer cloud specifications

 - improvements to turbulence calculations (including a fix of a bug
   that caused problems when the first layer was too thin)

 - fix for mass fluxes over topography to prevent unrealistic
   precipitation hotspots

 - Multiple vertical resolutions available

 - new interface for radiation to allow more control of greenhouse
   gases, aerosols etc. from rundeck.

 - Adjustable input of CH4 related stratospheric water vapour

 - Numerous parameters for the gravity wave drag  adjustable from the rundeck 

Coupled Model:

 - Gary's ocean model now fully coupled (plug and play option)

 - Ice dynamics now a completey separate module

 - Ocean heat transport diagnostic in printout

 - much more extensive ocean diagnostics

Tracer code:

 - tracer code for air mass and water mass tracers (uses preprocessing
   directives set from the run deck)

 - wet/dry deposition code for general tracers (aerosols, particles,
   water and soluble gases)

 - multiple example tracers pre-coded

Diagnostics: 
