@@ -155,14 +155,14 @@ This is stored through the CVS revision control system, and copies can
 be checked-out to your home directory using the following commands:</p>
 <tt>
    export CVSROOT=/u/cmrun/cvs/repository<br>
-   cvs checkout -r modelE-2-1 modelE<br>
+   cvs checkout -r modelE-2-0-1 modelE<br>
    cd modelE<br>
    cvs tag -b your_tag_here<br>
    cvs update -r your_tag_here<br>
 </tt>
 
 <p>This will create a directory modelE/ in your directory. The code
-will correspond to modelE-2-1. Please check to see if this is the
+will correspond to modelE-2-0-1. Please check to see if this is the
 latest release. It will be tagged with your own tag name so that your
 developments can be maintained by CVS, without conflicting with the
 main development branch.</P>
