@@ -1,4 +1,4 @@
-Major changes from version modelE-2-0 to modelE-2-1
+Major changes from version modelE-2-0 to modelE-2-0-1
 =====================================================
 
  - Minor fixes to almost all components
@@ -7,7 +7,8 @@ Major changes from version modelE-2-0 to modelE-2-1
 
  - netcdf output now fully functional
 
- - Changes to makefiles for compilation using Linux compilers (Absoft + Lahey)
+ - Changes to makefiles for compilation using Linux compilers (Absoft
+   + Lahey/Fujitsu)
 
 Major changes from version modelE-1-3-3 to modelE-2-0
 =====================================================
